6/09/2020
- Added additional flags to Static, Getable and Equipment to support a MUD test zone - no functionality yet
- Added masks to traits so they can set up a character when applied - not tested yet

6/07/2020
- Created the Trait entity and had them loaded in EntityDB
- Added traits to Organisms with load capability for NPCs
- Made initial wrap_width for screen text a config setting
- Made player save record reviewmsg, attributes, traits and wrap_width
- Added the stats/score command so attributes and traits could be viewed
- Added player creation demo menus for traits: gender, race, class

5/25/2020
- Created the Door class as a child of Static
- Added the open and close commands
- Added the ability to open/close containers (not tested yet)
- Made the ability to have hidden doors

5/20/2020
- Created the Equipment class
- Added body parts to Organisms
- Added the ability to equip Equipment
- Made worn equipment appear when a player is examined

5/12/2020
- Created the NPC class
- Added reviews to players and NPCs
- Added attributes to Entity objects and put a few in NPCs and Organisms
- NPCs appear in rooms and are examinable

5/8/2020
- Added the quitcom command
- Added linkloss code and timeouts to TCPConn and Player.cpp
- Revamped the parsing in ActionMgr to fix a few bugs
- Fixed tellcom crash bugs
